# receipt-ranger

./: .bumpversion.cfg  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.py  deploy.sh  design.py  image_conversion.py  main.py  pyproject.toml  requirements.txt  session.py  sheets.py
.claude/: settings.local.json
.cursor/: init.md
.cursor/bugs/: 1-DONE-sync-feature-creates-multiple-issues.md  10-DONE-visual-bug-micro-interaction-for-successful-api-key-entry-has-excessive-space.md  10-visual-bug-micro-interaction-for-successful-api-key-entry-has-excessive-space.md  11-DONE-application-should-retry-if-it-cant-capture-a-date.md  11-application-should-retry-if-it-cant-capture-a-date.md  12-DONE-cannot-add-more-than-one-receipt-at-a-time.md  12-cannot-add-more-than-one-receipt-at-a-time.md  13-DONE-visual-regression-selected-images-are-shown-twice.md  13-visual-regression-selected-images-are-shown-twice.md  14-DONE-four-google-sheets-tests-failing-on-main.md  (+23 more)
.streamlit/: config.toml
assets/: streamlit_overrides.css
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: receipt.baml
data/: exclusion_criteria.txt.example
deploy/: README.md  nginx.conf  receipt-ranger.service
docs/: bot-protection-checklist.md
scripts/: check_dockerfile_copies.py
tests/: test_app.py  test_check_dockerfile_copies.py  test_dockerfile_copies.py  test_image_conversion.py  test_main.py  test_prompt_injection.py  test_sheets.py
validation/: __init__.py  sanitizer.py
(+61 files in other folders)
